--- a/sample/ch02/css/ui.css
+++ b/sample/ch02/css/ui.css
@@ -27,7 +27,7 @@ html,body{overflow:hidden;height:100%;}
 
 #wrap{width:100%; height:100%; padding-right:180px;}
 #wrap > h1{font-size:0;}
-header .logo_box{position:absolute; right:35px; top:75px;}
+header .logo_box{position:absolute; right:35px; top:75px; cursor:pointer;}
 header .logo_box img{width:100px;}
 #wrap header{width:180px; height:100%; position:fixed; right:0px;top:0px;
     background:url(../images/menu_bg1.png) repeat-y; z-index:11;}
@@ -50,26 +50,56 @@ footer > a.google{background: url(../images/google.jpg)no-repeat; right: 80px;}
 footer > a.google:hover{background: url(../images/social_b_twitter.png) no-repeat;}
 
 #container {width:100%; height:100%; position: relative; max-width: 1200px; margin:0 auto;}
-#container .content{width:25%; height: 100% ;position: absolute;}
+#container .content{width:25%; height: 100% ;position: absolute; transition:all .5s;}
+#container .content.this .conbox{max-width:1100px; height: 10px; margin:0 auto;}
+#container .content.this{widows: 100%; left: 0 !important; height:100%; overflow:hidden; overflow-y:auto}
+#container .content.prev{widows: 100%; left: -100% !important;}
+#container .content.next{widows: 100%; left: 100% !important;}
+
+#container .content.this:before, #container .content.this:after,
+#container .content.this .conbox:before,#container .content.prev:before,
+#container .content.prev:after, #container .content.prev .conbox:before,
+#container .content.next:before, #container .content.next:after,
+#container .content.next .conbox:before{opacity: 0; transition:all .6s; transition-delay: .3s;}
+#container .content.this .conbox:before{transform: translate3d(300px,0,0);}
+#container .content.this:after{transform: translate3d(-300px,0,0);}
+
 #container #menu1{left:0%;background: url(../images/content_bg1.png) repeat;}
 #container #menu2{left:25%;background: url(../images/content_bg2.png) repeat;}
 #container #menu3{left:50%;background: url(../images/content_bg3.png) repeat;}
 #container #menu4{left:75%;background: url(../images/content_bg4.png) repeat;}
+
 #container .content:before,#container .content:after{content: ""; display: block; position: absolute;}
 #container .content:before{width:1px; height:100%;background:#000; left: 0;top: 0;z-index: 4;}
 #container .content:after{left:30px; top:180px; font-size:25px; font-weight:700; color:#ed3140;}
+
 #container #menu1:after{content:"회사소개";}
 #container #menu2:after{content:"도서소개";}
 #container #menu3:after{content:"FAQ";}
 #container #menu4:after{content:"Contact Us";}
-#container .content .conbox::before{content:""; display: block; positionn:absolute;}
-#container #menu1 .conbox::before{background: url(../images/main_ico1.png)no-repeat; width:350px;height: 260px;right: -10px;top:130px;background-size: 100%;}
-#container #menu2 .conbox::before{background: url(../images/main_ico2.png)no-repeat; width:180px;height: 470px;right: -30px;top:180px;background-size: 100%;}
-#container #menu3 .conbox::before{background: url(../images/main_ico3.png)no-repeat; width:270px;height: 310px;right: -60px;top:30px;background-size: 100%;}
-#container #menu4 .conbox::before{background: url(../images/main_ico4.png)no-repeat; width:350px;height: 400px;right: -170px;top:100px;background-size: 100%;}
+
+#container .content .conbox:before{content:""; display: block; positionn:absolute;}
+#container #menu1 .conbox:before{background: url(../images/main_ico1.png)no-repeat; width:350px;height: 260px;right: -10px;top:130px;background-size: 100%;}
+#container #menu2 .conbox:before{background: url(../images/main_ico2.png)no-repeat; width:180px;height: 470px;right: -30px;top:180px;background-size: 100%;}
+#container #menu3 .conbox:before{background: url(../images/main_ico3.png)no-repeat; width:270px;height: 310px;right: -60px;top:30px;background-size: 100%;}
+#container #menu4 .conbox:before{background: url(../images/main_ico4.png)no-repeat; width:350px;height: 400px;right: -170px;top:100px;background-size: 100%;}
 #container .content h2{opacity: 0;}
+#container .content.this h2{height:auto; padding:30px 0 20px 50px; color:#000; position:relative; background:#fff; font-size:28px; font-weight:400; opacity:1; transition: all .6s;transition-delay: 1.2s;}
+#container .content.this h2:after{content:""; width:100%; height:8px; background:#ed3140; position:absolute; left:0;bottom:0;}
+#container .content .conbox .content_wrap{opacity: 0;}
+#container .content.this .conbox .content_wrap{padding:30px 50px 50px 50px; opacity: 1;}
 
-
-
-
-
+#container .content{top:-100%; transition:all .8s;}
+#container .content:nth-of-type(2){transition-delay: .3s;}
+#container .content:nth-of-type(3){transition-delay: .6s;}
+#container .content:nth-of-type(4){transition-delay: .8s;}
+#container.start .content{top:0;}
+.pargrph_tit{margin-bottom: 50px; font-size: 24px; color:#fff; position: relative; padding: 0px;}
+.pargrph_tit:after{content:""; display:block; width:30px;height:8px;background:#ed3140;position: absolute; left:0;bottom:-10px;}
+.text_box{position:relative;}
+.text_box h4{font-size:40px; color:#d6d4d4; font-weight:700;}
+.text_box p{margin-bottom: 50px; color:#ababab; line-height: 20px;}
+.text_box:nth-child(odd){text-align:left;}
+.text_box:nth-child(even){text-align:right;}
+.text_box:nth-child(1):after{content:"";display:block; width: 206px; height:100%; position: absolute;right:0;top:0;background: url(../images/content_img1.png)no-repeat right top; background-size: 206px auto;}
+.text_box:nth-child(1) p{width:100%; padding-right:206px;}
